Fix #3: Statusbar not correctly aligned when not using right sidebar
Unfortunately, status bar location can't be dynamically controlled based on other factors, such as sidebar presence and width, so inlined status bar feature has to be removed.

--- a/source/theme.css
+++ b/source/theme.css
@@ -234,10 +234,10 @@ body.is-focused .workspace-tabs.mod-top,
 
 
 /* Status Bar */
-.status-bar {
+/* .status-bar {
     background-color: var(--dark_bg_4);
     margin-right: 301px;
-}
+} */
 
 /* Ribbon */
 .workspace-ribbon.side-dock-ribbon.mod-left {
